fix: performance on safari

--- a/assets/global.css
+++ b/assets/global.css
@@ -10,10 +10,6 @@ body {
   }
 }
 
-/* Hackish solution to improve performance and reduce cpu usage on safari */
-* {
-  transform: rotateZ(360deg);
-}
 
 .app-container {
   @apply w-full flex-1 overflow-hidden;
@@ -172,9 +168,6 @@ body {
           drop-shadow(0px 8px 6px rgba(133, 200, 200, 0.1));
   transition: filter 300ms ease-out;
 
-  svg {
-    filter: drop-shadow(0px 1px 1px rgba(0,0,0,0.5));
-  }
 }
 
 .dockify-app-logo:hover .app-logo-embossed {
